--- a/pedidos-client/src/app/navbar/navbar.component.html
+++ b/pedidos-client/src/app/navbar/navbar.component.html
@@ -1,14 +1,20 @@
 <nav>
-    <div class="navbar-content">
-        <span>
-            <a href="#"><img id="logo-maxima" src="../../assets/icones/logotipo-maximatech.png" alt="logotipo-maximatech"></a>
-        </span>
-        <ul class="menu-area">
-            <li>
-                <a href="#">Cadastro</a>
+    <div class="container">
+        <span><a href="#"><img id="logo-maxima" src="../../assets/icones/logotipo-maximatech.png" alt="logotipo-maximatech"></a></span>
+        <ul>
+            <li class="dropdown">
+                <a href="#">Cadastro<span class="menu-arrow-down"></span></a>
+                <div class="dropdown-content">
+                    <a href="#">Cliente</a>
+                    <a href="#">Produto</a>
+                </div>
             </li>
-            <li>
-                <a href="#">Pedido</a>
+            <li class="dropdown">
+                <a href="#">Pedido<span class="menu-arrow-down"></span></a>
+                <div class="dropdown-content">
+                    <a href="#">Novo pedido</a>
+                    <a href="#">Consulta pedido</a>
+                </div>
             </li>
         </ul>
     </div>
