--- a/pedidos-client/src/styles.css
+++ b/pedidos-client/src/styles.css
@@ -18,8 +18,8 @@ body {
     max-width: 1319px;
 }
 
-hr {
-    border: 1px solid rgba(0, 0, 0, 0.3)
+@media only screen and (max-width: 1450px) {
+    .container { width: 90%; }
 }
 
 h1 {
@@ -27,42 +27,46 @@ h1 {
     margin: 30px 0;
 }
 
-.panel {
-    width: 100%;
-    margin-bottom: 30px;
-    background: #FFF;
-    padding: 35px 37px;
-    box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.12);
-    border-radius: 10px;
-}
-
-.title-panel {
-    font-size: 22.75;
-    margin: 0 0 20px 0;
-    color: #373A3C;
-}
-
 input {
     border: 1px solid #CCC;
     border-radius: 4px;
     padding: 6px 10px;
+    font-size: 16px;
 }
 
-.btn {
-    width: 100%;
-    color: #000;
-    background: #FFF;
-    border: 1px solid #CCC;
-    border-radius: 4px;
-    font-size: 20px;
-    padding: 13px;
-    margin: 10px 0;
+/* ICONES */
+.icon {
+    content: '';
+    position:absolute;
+    width:20px;
+    height:20px;
+    margin-left:-30px;
 }
 
-.btn-primary {
-    background: #5CB85C;
-    color: #FFF;
+.icon-pesquisa {
+    background:url('./assets/icones/icone-pesquisa.png');
+    background-size:cover;
+    margin: 0;
 }
 
-.btn:hover { background: #CCC }
+.icon-apagar {
+    background:url('./assets/icones/icone-apagar.png');
+    background-size:cover;
+    margin: 0;
+}
+
+.icon-cliente {
+    background:url('./assets/icones/icone-cliente.png');
+    background-size:cover;
+}
+
+.icon-carrinho {
+    background:url('./assets/icones/icone-carrinho.png');
+    background-size:cover;
+}
+
+.icon-total {
+    background:url('./assets/icones/icone-total.png');
+    background-size:cover;
+}
   
