--- a/pedidos-client/src/app/app.component.html
+++ b/pedidos-client/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar>
 
 <div class="container">
-  <app-pedido-form></app-pedido-form>
+  <router-outlet></router-outlet>
 </div>
