Adiciona estilos consulta pedido

--- a/pedidos-client/src/app/pedido/pedido-consulta/pedido-consulta.component.html
+++ b/pedidos-client/src/app/pedido/pedido-consulta/pedido-consulta.component.html
@@ -1,1 +1,21 @@
-<p>pedido-consulta works!</p>
+<h1>Consulta pedido</h1>
+
+<section class="panel">
+    <h3 class="title-panel"><i class="icon icon-pedidos"></i>Pedidos</h3>
+
+    <table>
+        <tr>
+            <th>#</th>
+            <th>Valor total</th>
+            <th>Quant. de itens</th>
+            <th>Valor do frete</th>
+        </tr>
+        <tr>
+            <td>12345678</td>
+            <td>R$ 1.364,32</td>
+            <td>8</td>
+            <td>12,00</td>
+        </tr>
+    </table>
+
+</section>
