--- a/pedidos-client/src/styles.css
+++ b/pedidos-client/src/styles.css
@@ -27,6 +27,21 @@ h1 {
     margin: 30px 0;
 }
 
+.panel {
+    width: 100%;
+    margin-bottom: 30px;
+    background: #FFF;
+    padding: 35px 37px;
+    box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.12);
+    border-radius: 10px;
+}
+
+.title-panel {
+    font-size: 22.75;
+    margin: 0 0 20px 30px;
+    color: #373A3C;
+}
+
 input {
     border: 1px solid #CCC;
     border-radius: 4px;
@@ -67,6 +82,11 @@ input {
 
 .icon-total {
     background:url('./assets/icones/icone-total.png');
+    background-size:cover;
+}
+
+.icon-pedidos {
+    background:url('./assets/icones/icone-pedidos.png');
     background-size:cover;
 }
   
