--- a/pedidos-client/src/app/pedido/pedido-form/pedido-form.component.css
+++ b/pedidos-client/src/app/pedido/pedido-form/pedido-form.component.css
@@ -98,3 +98,61 @@ hr {
 
 .btn:hover { background: #CCC }
 .btn-primary:hover { background: #457345;}
+
+.product-card {
+    height: 100px; 
+    margin: 20px 0;
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    justify-content: space-between;
+}
+
+.product-image {
+    float: left;
+    height: 100%;
+}
+
+.product-details {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    max-width: 400px;
+}
+
+.product-details>h3 {
+    margin: 5px 20px;
+    font-size: 20px;
+}
+
+.product-details>p {
+    margin: 5px 20px;
+    font-size: 16px;
+    color: rgba(0, 0, 0, 0.4);
+}
+
+.product-prices {
+    display: flex;
+    padding: 0 70px;
+    flex-direction: column;
+    justify-content: center;
+    height: 100%;
+}
+
+.btn-apagar-produto {
+    /* display: flex; */
+    /* flex-direction: column; */
+    /* justify-content: center; */
+    position: absolute;
+    right: 30px;
+    top: 50%;
+    margin-top: -10px;
+    /* transform: translate(0, -50%); */
+    cursor: pointer;
+}
+
+.preco-produto {
+    text-align: right; 
+    font-size: 20px; 
+    margin: 5px 0;
+}
