--- a/pedidos-client/src/app/pedido/pedido-form/pedido-form.component.html
+++ b/pedidos-client/src/app/pedido/pedido-form/pedido-form.component.html
@@ -2,7 +2,7 @@
 
 <!-- CLIENTE -->
 <section class="panel">
-    <h3 class="title-panel"><i class="icon icon-cliente"></i>Cliente</h3>
+    <h2 class="title-panel"><i class="icon icon-cliente"></i>Cliente</h2>
 
     <div class="input-container">
         <input type="text" class="input-cliente" placeholder="Informe um cliente *">
@@ -15,7 +15,7 @@
 
 <!-- CARRINHO -->
 <section class="panel">
-    <h3 class="title-panel"><i class="icon icon-carrinho"></i>Carrinho</h3>
+    <h2 class="title-panel"><i class="icon icon-carrinho"></i>Carrinho</h2>
 
     <div class="input-container">
         <input type="text" class="input-produto" placeholder="Pesquise um produto">
@@ -25,16 +25,36 @@
         </span>
     </div>
 
-    <div class="carrinho-vazio">
+    <hr />
+    <div class="product-card">
+        <div>
+            <img src="../../../assets/icones/foto-fanta.png" class="product-image" alt="produto">
+            <div class="product-details">
+                <p>8689</p>
+                <h3>Fardo 6UN Coca-Cola 600ml</h3>
+            </div>
+        </div>
+
+        <div>
+            <div class="product-prices">
+                <span><input type="number" style="width: 50px;"> x R$ 17,34</span>
+                <p class="preco-produto">R$ 66,56</p>
+            </div>
+            <span class="btn-apagar-produto"><i class="icon icon-apagar"></i></span>
+        </div>
+    </div>
+    <hr />
+
+    <!-- <div class="carrinho-vazio">
         <img class="img-carrinho-vazio" src="../../../assets/icones/imagem-carrinho-empty-state.png" alt="">
         <p class="carrinho-vazio-title">Carrinho vazio</p>
         <p class="carrinho-vazio-subtitle">Nenhum produto foi inserido</p>
-    </div>
+    </div> -->
 </section>
 
 <!-- TOTAL -->
 <section class="panel">
-    <h3 class="title-panel"><i class="icon icon-total"></i>Total</h3>
+    <h2 class="title-panel"><i class="icon icon-total"></i>Total</h2>
 
     <div class="total-panel">
 
