--- a/pedidos-client/src/styles.css
+++ b/pedidos-client/src/styles.css
@@ -49,6 +49,13 @@ input {
     font-size: 16px;
 }
 
+/* Remove number input spinners */
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
+
 /* ICONES */
 .icon {
     content: '';
