--- a/pedidos-frontend/src/app/pedido/pedido-form/pedido-form.component.css
+++ b/pedidos-frontend/src/app/pedido/pedido-form/pedido-form.component.css
@@ -16,12 +16,12 @@
 
 .input-cliente {
     width: 50%;
-    padding: 10px 20px 5px 20px;
+    /* padding: 10px 20px 5px 20px; */
 }
 
 .input-produto { 
     width: 45%;
-    padding: 10px 20px 5px 20px;
+    /* padding: 10px 20px 5px 20px; */
 }
 
 select {
@@ -159,6 +159,8 @@ hr {
     right: 30px;
     top: 50%;
     margin-top: -10px;
+    background: none; 
+    border: none;
     /* transform: translate(0, -50%); */
     cursor: pointer;
 }
