--- a/pedidos-frontend/src/styles.css
+++ b/pedidos-frontend/src/styles.css
@@ -84,6 +84,8 @@ input[type=number]::-webkit-outer-spin-button {
 .icon-apagar {
     background:url('./assets/icones/icone-apagar.png');
     background-size:cover;
+    left: 5px;
+    top: 3px;
     margin: 0;
 }
 
